@@ -2,6 +2,7 @@
 - Added support for ELF symbol type, binding, and visibility
 - Added support for symbols with absolute addresses using .set
 - Added support for the .zero directive
+- Added support for sym-sym symbolic expressions
 
 0.1.0:
 - gtirb-rewriting now requires gtirb 1.10.6.
